@@ -14,7 +14,12 @@ AT_DATA(MT/work, [add_file "./bar"
 AT_DATA(bar, [blah blah
 ])
 
-AT_CHECK(MONOTONE cat manifest, [3], [ignore], [ignore])
-AT_CHECK(MONOTONE commit --message=foo --branch=foo, [3], [ignore], [ignore])
+AT_CHECK(MONOTONE cat manifest, [], [stdout], [ignore])
+AT_CHECK(grep -q ' bar' stdout)
+AT_CHECK(MONOTONE cat revision, [], [stdout], [ignore])
+AT_CHECK(grep -q '"bar"' stdout)
+AT_CHECK(MONOTONE commit --message=foo --branch=foo, [], [ignore], [ignore])
+AT_CHECK(MONOTONE cat revision `BASE_REVISION`, [], [stdout], [ignore])
+AT_CHECK(grep -q '"bar"' stdout)
 
 AT_CLEANUP
